k8s/minikube/common/no-keycloak/deploy-no-keycloak.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^/cse/import/idcc$ /cse/import/idcc/ permanent;
      rewrite ^/cse/import/d2cc$ /cse/import/d2cc/ permanent;
      rewrite ^/cse/export/idcc$ /cse/export/idcc/ permanent;
      rewrite ^/cse/export/d2cc$ /cse/export/d2cc/ permanent;
      rewrite ^/core/valid$ /core/valid/ permanent;
      proxy_set_header X-Forwarded-Prefix /cse/import/d2cc/;
      proxy_set_header userId "johnDoe";
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/server-snippet: |
      merge_slashes off;
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/client-max-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
  labels:
    app: gridcapa
    component: gridcapa
  name: gridcapa-no-auth
spec:
  rules:
    - host: gridcapa-dev-no-auth.farao-local-community.com
      http:
        paths:
          - backend:
              service:
                name: core-valid-gridcapa-app
                port:
                  number: 80
            path: /core/valid(/|$)(.*)
            pathType: Prefix
          - backend:
              service:
                name: config-server
                port:
                  number: 80
            path: /core/valid/config(/|$)(.*)
            pathType: Prefix
          - backend:
              service:
                name: config-notification-server
                port:
                  number: 80
            path: /core/valid/config-notification(/|$)(.*)
            pathType: Prefix
          - backend:
              service:
                name: core-valid-task-manager
                port:
                  number: 80
            path: /core/valid/task-notification(/|$)(.*)
            pathType: Prefix
          - backend:
              service:
                name: core-valid-task-manager
                port:
                  number: 80
            path: /core/valid/task-manager(/|$)(.*)
            pathType: Prefix
          - backend:
              service:
                name: core-valid-gridcapa-job-launcher
                port:
                  number: 80
            path: /core/valid/gridcapa-job-launcher(/|$)(.*)
            pathType: Prefix
          - backend:
              service:
                name: cse-import-idcc-gridcapa-app
                port:
                  number: 80
            path: /cse/import/idcc(/|$)(.*)
            pathType: Prefix
          - backend:
              service:
                name: config-server
                port:
                  number: 80
            path: /cse/import/idcc/config(/|$)(.*)
            pathType: Prefix
          - backend:
              service:
                name: config-notification-server
                port:
                  number: 80
            path: /cse/import/idcc/config-notification(/|$)(.*)
            pathType: Prefix
          - backend:
              service:
                name: cse-import-idcc-task-manager
                port:
                  number: 80
            path: /cse/import/idcc/task-notification(/|$)(.*)
            pathType: Prefix
          - backend:
              service:
                name: cse-import-idcc-task-manager
                port:
                  number: 80
            path: /cse/import/idcc/task-manager(/|$)(.*)
            pathType: Prefix
          - backend:
              service:
                name: cse-import-idcc-gridcapa-job-launcher
                port:
                  number: 80
            path: /cse/import/idcc/gridcapa-job-launcher(/|$)(.*)
            pathType: Prefix
          - backend:
              service:
                name: cse-import-d2cc-gridcapa-app
                port:
                  number: 80
            path: /cse/import/d2cc(/|$)(.*)
            pathType: Prefix
          - backend:
              service:
                name: config-server
                port:
                  number: 80
            path: /cse/import/d2cc/config(/|$)(.*)
            pathType: Prefix
          - backend:
              service:
                name: config-notification-server
                port:
                  number: 80
            path: /cse/import/d2cc/config-notification(/|$)(.*)
            pathType: Prefix
          - backend:
              service:
                name: cse-import-d2cc-task-manager
                port:
                  number: 80
            path: /cse/import/d2cc/task-notification(/|$)(.*)
            pathType: Prefix
          - backend:
              service:
                name: cse-import-d2cc-task-manager
                port:
                  number: 80
            path: /cse/import/d2cc/task-manager(/|$)(.*)
            pathType: Prefix
          - backend:
              service:
                name: cse-import-d2cc-gridcapa-job-launcher
                port:
                  number: 80
            path: /cse/import/d2cc/gridcapa-job-launcher(/|$)(.*)
            pathType: Prefix

          - backend:
              service:
                name: cse-export-idcc-gridcapa-app
                port:
                  number: 80
            path: /cse/export/idcc(/|$)(.*)
            pathType: Prefix
          - backend:
              service:
                name: config-server
                port:
                  number: 80
            path: /cse/export/idcc/config(/|$)(.*)
            pathType: Prefix
          - backend:
              service:
                name: config-notification-server
                port:
                  number: 80
            path: /cse/export/idcc/config-notification(/|$)(.*)
            pathType: Prefix
          - backend:
              service:
                name: cse-export-idcc-task-manager
                port:
                  number: 80
            path: /cse/export/idcc/task-notification(/|$)(.*)
            pathType: Prefix
          - backend:
              service:
                name: cse-export-idcc-task-manager
                port:
                  number: 80
            path: /cse/export/idcc/task-manager(/|$)(.*)
            pathType: Prefix
          - backend:
              service:
                name: cse-export-idcc-gridcapa-job-launcher
                port:
                  number: 80
            path: /cse/export/idcc/gridcapa-job-launcher(/|$)(.*)
            pathType: Prefix
          - backend:
              service:
                name: cse-export-d2cc-gridcapa-app
                port:
                  number: 80
            path: /cse/export/d2cc(/|$)(.*)
            pathType: Prefix
          - backend:
              service:
                name: config-server
                port:
                  number: 80
            path: /cse/export/d2cc/config(/|$)(.*)
            pathType: Prefix
          - backend:
              service:
                name: config-notification-server
                port:
                  number: 80
            path: /cse/export/d2cc/config-notification(/|$)(.*)
            pathType: Prefix
          - backend:
              service:
                name: cse-export-d2cc-task-manager
                port:
                  number: 80
            path: /cse/export/d2cc/task-notification(/|$)(.*)
            pathType: Prefix
          - backend:
              service:
                name: cse-export-d2cc-task-manager
                port:
                  number: 80
            path: /cse/export/d2cc/task-manager(/|$)(.*)
            pathType: Prefix
          - backend:
              service:
                name: cse-export-d2cc-gridcapa-job-launcher
                port:
                  number: 80
            path: /cse/export/d2cc/gridcapa-job-launcher(/|$)(.*)
            pathType: Prefix

          - backend:
              service:
                name: filebrowser
                port:
                  number: 80
            path: /utils/filebrowser(/|$)(.*)
            pathType: Prefix
          - backend:
              service:
                name: gridcapa-rabbitmq
                port:
                  number: 15672
            path: /utils/rabbitmq(/|$)(.*)
            pathType: Prefix
          - backend:
              service:
                name: apps-metadata-server
                port:
                  number: 80
            path: /apps-metadata(/|$)(.*)
            pathType: Prefix
          - backend:
              service:
                name: gridcapa-minio
                port:
                  number: 9000
            path: /()(minio.*)
            pathType: Prefix
